# belief-state-machine

./: .gitignore  Makefile  README.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  pyproject.toml
backend/api/: views.py
backend/api/crew/: crew.py  main.py
backend/api/crew/config/: agents.yaml  tasks.yaml
backend/backend/: settings.py  urls.py
ecs/: backend-task-def.json  frontend-task-def.json
experiments/: pyproject.toml  todo.md
experiments/system_1/: build_belief_tree.ipynb  crew.py  experiment_compare_with_ChatGPT.ipynb  main.py
experiments/system_1/config/: tasks.yaml
frontend/: .gitignore  package-lock.json
frontend/src/: App.js  App.test.js
prompts/: belief_extraction.md  system_design.md  system_design_0G.md  system_design_1_fabs.md
scripts/: scale_down.sh  scale_up.sh
terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  security_groups.tf  variables.tf  vpc.tf
