[tool.poetry]
name = "bsm_experiments"
version = "0.1.0"
description = "bsm experiments using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = { extras = ["tools"], version = ">=0.75" }
crewai-tools = ">=0.13"

[tool.poetry.scripts]
system_1 = "system_1.main:run"
train = "system_1.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"